--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -692,6 +692,14 @@
 	<string name="careportal_pump_label">PUMP</string>
     <string name="overview_newtempbasal_basalabsolute">Basal value [U/h]</string>
     <string name="careportal_newnstreatment_duration_min_label">Duration [min]</string>
+    <string name="openapssmb">OpenAPS SMB</string>
+    <string name="smb_shortname">SMB</string>
+    <string name="key_use_smb">use_smb</string>
+    <string name="key_use_uam">use_uam</string>
+    <string name="enableuam">Enable UAM</string>
+    <string name="enablesmb">Enable SMB</string>
+    <string name="enablesmb_summary">Use Super Micro Boluses instead of temp basal for faster action</string>
+    <string name="enableuam_summary">Detection of Unannounced meals</string>
     <string name="key_insulin_oref_peak" translatable="false">insulin_oref_peak</string>
     <string name="insulin_oref_peak">IOB Curve Peak Time</string>
     <string name="insulin_peak_time">Peak Time [min]</string>
@@ -707,5 +715,8 @@
     <string name="key_wizard_include_trend_bg">wizard_include_trend_bg</string>
     <string name="key_wizard_include_bolus_iob">wizard_include_bolus_iob</string>
     <string name="key_wizard_include_basal_iob">wizard_include_basal_iob</string>
+    <string name="smbmaxminutes">45 60 75 90 105 120</string>
+    <string name="smbmaxminutes_summary">Max minutes of basal to limit SMB to</string>
+    <string name="key_smbmaxminutes" translatable="false">smbmaxminutes</string>
 </resources>
 
